package com.project.fingerprint;
import com.project.core.Fingerprint;

public interface Fingerprintable {
    Fingerprint generateFingerprint();
}