' Generated by UML Generator
' Encoded: ZP51ImCn48Nlyolck4KfdlSWxMNHWo1KUX4FqsHsEpJ9BicieBN-ThCLxMwnu6a8R_BblPT5KehQUmTf9w6ZI1wDevIMgb4slVAzQSDAtXblO2kMqKWqZW6EMrXLJokDfDoyuHuGh_OPg68EMDTQH2PNectxZUFdbsiKJytfF2lnjHKxt6euy40fF5kX4X-6aVLbRwMj93GSkoX1uG2G1yUQ3ED8e4my6lZyGOt48fF-0vaa-GKLYNpdE9rSdR6-ctYyexITTd4frJhtU9vgNEHy_d7xbo-Old5nRS71vY_z0W
' URL: http://www.plantuml.com/plantuml/uml/ZP51ImCn48Nlyolck4KfdlSWxMNHWo1KUX4FqsHsEpJ9BicieBN-ThCLxMwnu6a8R_BblPT5KehQUmTf9w6ZI1wDevIMgb4slVAzQSDAtXblO2kMqKWqZW6EMrXLJokDfDoyuHuGh_OPg68EMDTQH2PNectxZUFdbsiKJytfF2lnjHKxt6euy40fF5kX4X-6aVLbRwMj93GSkoX1uG2G1yUQ3ED8e4my6lZyGOt48fF-0vaa-GKLYNpdE9rSdR6-ctYyexITTd4frJhtU9vgNEHy_d7xbo-Old5nRS71vY_z0W
' Generated on: 2026-04-13T10:09:10.000697600

@startuml
skinparam classAttributeIconSize 0
hide circle

class FFTStrategy {
  +{static} fft(real: double[], imag: double[]): void
  +generate(media: Media): AudioFingerprint
}

interface Fingerprintable {
  ~generateFingerprint(): Fingerprint
}

interface FingerprintStrategy {
  ~generate(samples: Media): Fingerprint
}

class PHashStrategy {
  +generate(media: Media): VideoFingerprint
}

FFTStrategy ..|> FingerprintStrategy
PHashStrategy ..|> FingerprintStrategy
@enduml